--- a/package.yaml
+++ b/package.yaml
@@ -60,7 +60,8 @@ dependencies:
   - cassava >= 0.5.1.0
   - async >= 2.2.1
   - integer-gmp >= 1.0.1.0
-  # - file-embed >= 0.0.10.1
+  - vector >= 0.12.0.1
+# - file-embed >= 0.0.10.1
   #- aeson >= 1.2.3.0
   #- bytestring >= 0.10.8.1
   # - split >= 0.2.3.2
