--- a/package.yaml
+++ b/package.yaml
@@ -57,13 +57,13 @@ dependencies:
   - template-haskell >= 2.12.0.0
   - makefile >= 1.1.0.0
   - fgl >= 5.6.0.0
-  - cassava >= 0.5.1.0
   - async >= 2.2.1
+  - stm
   - integer-gmp >= 1.0.1.0
   - vector >= 0.12.0.1
 # - file-embed >= 0.0.10.1
   #- aeson >= 1.2.3.0
-  #- bytestring >= 0.10.8.1
+  - bytestring >= 0.10.8.1
   # - split >= 0.2.3.2
   # - aeson-pretty >= 0.8.5
   #- lens >= 4.15.4
