--- a/package.yaml
+++ b/package.yaml
@@ -61,6 +61,7 @@ dependencies:
   - stm
   - integer-gmp >= 1.0.1.0
   - vector >= 0.12.0.1
+  - interpolate >= 0.2.0
 # - file-embed >= 0.0.10.1
   #- aeson >= 1.2.3.0
   - bytestring >= 0.10.8.1
