--- a/package.yaml
+++ b/package.yaml
@@ -23,7 +23,9 @@ ghc-options:
   - -Wcompat
   - -Wnoncanonical-monad-instances
   - -Wnoncanonical-monadfail-instances
-  - -O2
+  - -Wredundant-constraints
+  - -Wincomplete-uni-patterns
+  - -O0
 
 cc-options:
   - -g
@@ -35,14 +37,20 @@ c-sources: cbits/api.c
 
 dependencies:
   - base >= 4.7 && < 5
+  - text >= 1.2.2.2
+  - pretty-show >= 1.6.13
+  - directory >= 1.3.0.2
+  - optparse-applicative >= 0.14.2.0
+
+library:
+  source-dirs: src
+  dependencies:
   - language-vhdl-quote
   - containers >= 0.5.10.2
   - unordered-containers >= 0.2.8.0
   - filepath >= 1.4.1.2
-  - directory >= 1.3.0.2
   - mtl >= 2.2.1
   - uniplate >= 1.6.12
-  - pretty-show >= 1.6.13
   - megaparsec >= 6.3.0
   - bimap >= 0.3.3
   # Remove from stack.yaml once in stackage
@@ -52,7 +60,6 @@ dependencies:
   - exceptions >= 0.8.3
   - hashable >= 1.2.6.1
   - extra >= 1.6.3
-  - text >= 1.2.2.2
   - mono-traversable >= 1.0.8.1
   - template-haskell >= 2.12.0.0
   - makefile >= 1.1.0.0
@@ -62,16 +69,14 @@ dependencies:
   - integer-gmp >= 1.0.1.0
   - vector >= 0.12.0.1
   - interpolate >= 0.2.0
-# - file-embed >= 0.0.10.1
-  #- aeson >= 1.2.3.0
   - bytestring >= 0.10.8.1
+  # - file-embed >= 0.0.10.1b
+  #- aeson >= 1.2.3.0
   # - split >= 0.2.3.2
   # - aeson-pretty >= 0.8.5
   #- lens >= 4.15.4
   #- recursion-schemes
 
-library:
-  source-dirs: src
   # ghc-options:
   #   - -Wall
 
@@ -86,7 +91,6 @@ executables:
     # - -Wall
     dependencies:
       - libsme
-      - optparse-applicative
 
   smeast:
     main:                smeast.hs
@@ -100,13 +104,13 @@ executables:
       - libsme
       - optparse-applicative
 
-tests:
-  libsme-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-      - -threaded
-      - -rtsopts
-      - -with-rtsopts=-N
-    dependencies:
-      - libsme
+# tests:
+#   libsme-test:
+#     main:                Spec.hs
+#     source-dirs:         test
+#     ghc-options:
+#       - -threaded
+#       - -rtsopts
+#       - -with-rtsopts=-N
+#     dependencies:
+#       - libsme
