--- a/package.yaml
+++ b/package.yaml
@@ -70,6 +70,7 @@ library:
   - vector >= 0.12.0.1
   - interpolate >= 0.2.0
   - bytestring >= 0.10.8.1
+  - bitwise >= 1.0.0.1
   # - file-embed >= 0.0.10.1b
   #- aeson >= 1.2.3.0
   # - split >= 0.2.3.2
