--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: nightly-2018-05-29
+resolver: nightly-2018-06-02
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -69,5 +69,5 @@ extra-deps:
 # extra-lib-dirs: [/path/to/dir]
 #
 # Allow a newer minor version of GHC than the snapshot specifies
-# compiler-check: newer-minor
+compiler-check: newer-minor
 allow-newer: true
