--- a/package.yaml
+++ b/package.yaml
@@ -43,6 +43,7 @@ dependencies:
   - pretty-show >= 1.6.13
   - directory >= 1.3.0.2
   - optparse-applicative >= 0.14.2.0
+  - safe-exceptions >= 0.1.7.0
 
 library:
   source-dirs: src
@@ -57,7 +58,6 @@ library:
   - bimap >= 0.3.3
   - mainland-pretty >= 0.7
   - srcloc >= 0.5.1.2
-  - exceptions >= 0.8.3
   - hashable >= 1.2.6.1
   - extra >= 1.6.3
   - mono-traversable >= 1.0.8.1
@@ -71,15 +71,6 @@ library:
   - interpolate >= 0.2.0
   - bytestring >= 0.10.8.1
   - bitwise >= 1.0.0.1
-  # - file-embed >= 0.0.10.1b
-  #- aeson >= 1.2.3.0
-  # - split >= 0.2.3.2
-  # - aeson-pretty >= 0.8.5
-  #- lens >= 4.15.4
-  #- recursion-schemes
-
-  # ghc-options:
-  #   - -Wall
 
 executables:
   smec:
