--- a/package.yaml
+++ b/package.yaml
@@ -72,6 +72,7 @@ library:
   - interpolate >= 0.2.0
   - bytestring >= 0.10.8.1
   - bitwise >= 1.0.0.1
+  - rainbow >= 0.30.0.2
 
 executables:
   smec:
